Opened 14 years ago
Closed 8 years ago
#6747 closed bug (fixed)
[BOutlineListView] incorrect behavior observed in Locale preflet's usage of the list view
Reported by: | anevilyak | Owned by: | nobody |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
The new variant of the locale preflet exposes a number of problems in BOutlineListView, namely:
a) it sometimes shows formatting subsections that cannot correctly be collapsed ; the scrollbar updates as if the items have been removed, but the items are still visible. Furthermore this randomly breaks being able to click them.
b) The width calculation for the items / horizontal scroller appears to be completely broken. Need to investigate if that's a problem in the view itself or some quirk of the custom list items being used in order to draw the name/flag combination.
Change History (6)
comment:1 by , 14 years ago
Status: | new → in-progress |
---|
comment:2 by , 14 years ago
Description: | modified (diff) |
---|
comment:3 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | in-progress → assigned |
comment:6 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
As best I can tell, both issues have been resolved here. Thanks!
Not currently working on this.