Go through the list view to tell it to expand the super item rather than setting its expanded property. Doesn't actually fix #6747 but at least corrects the observed bogus behavior for now until I figure out a proper solution that isn't hideously inefficient, no thanks to the train wreck that is the API design we inherited from Be for BOLV.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39144 a95241bf-73f2-0310-859d-f6bbb57e9c96